# lungmendragons.com

./: .gitignore  .gitmodules  .infisical.json  README.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wrangler.toml
.github/workflows/: deploy.yml  nuxthub.yml
app/: app.vue  error.vue  router.options.ts
app/assets/css/: fonts.css  katex.min.css
app/components/: ExternalLinkIcon.global.vue  Link.global.vue
app/components/Bingo/: Container.vue  Grid.vue  Log.vue  StreamCCTile.vue  StreamTile.vue  TeamNameSet.vue  Tile.vue  TileBonus.vue  TileStandard.vue  TimeSpan.vue
app/components/Home/: Logo3D.vue  (+3 more)
app/composables/: auth.ts  bingo.ts  bingoold.ts  gamedata.ts  loading.ts  markdown.ts  subdomain.ts  upload.ts
app/layouts/: desktop.vue  mobile.vue
app/middleware/: auth.global.ts  hash.global.ts
app/pages/: index.vue
app/plugins/: auth.client.ts  auth.server.ts
app/stores/: bingo.ts  markdown.ts  notifs.ts
app/utils/: auth.ts  breakpoints.ts  gachasim.ts  general.ts  index.d.ts  markdown-editor.ts  menu.ts  resource-index.ts  theme.ts  timeline-items.ts
patches/: @juggle__resize-observer.patch
public/: kofi-embed.html
public/3d/: ld3dsvg.glb
public/gltf/: LD3D.gltf
public/md/: markdown-reference.md
rs-app/: Cargo.toml
rs-app/src/: gacha.rs  lib.rs  lib.ts
server/api/: [...auth].ts  migrate.ts  notifs.get.ts  notifs.put.ts
server/middleware/: subdomain.ts
server/plugins/: auth.ts
server/tasks/: gsheet.ts  yt-recent.ts
server/utils/: auth.ts  bindings.ts  kysely-d1.ts
shared/: auth.ts
(+132 files in other folders)
