[package]
name = "rs-app"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.9"
rand_xoshiro = "0.7"
serde = { version = "1", features = [ "derive" ] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
# opt-level = "z"
lto = true
codegen-units = 1
